--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,9 @@
 				</section>
 				<section class="section-title-wrapper background-black">
 					<h2 class="section-title-decor">ПРОДВИЖЕНИЕ НА МАРКЕТПЛЕЙСАХ</h2>
-					<div class="section-title-wrapper__container _container"><span class="title-hidden">qwerty</span></div>
+					<div class="section-title-wrapper__container _container">
+						<span class="title-hidden">qwerty</span>
+					</div>
 				</section>
 				<section class="craft background-black">
 					<div class="craft__container _container">
@@ -779,6 +781,29 @@
 								<button class="team__button button button--icon">
 									<span>О Компании</span>
 									<img src="@img/icons/button-arrow.svg" alt="icon" />
+								</button>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="what-we-do what-we-do--why-me background-white">
+					<div class="what-we-do__container _container">
+						<div class="what-we-do__body">
+							<h2 class="what-we-do__title">Что мы <span>делаем?</span></h2>
+							<div class="what-we-do__text-wrapper">
+								<p class="what-we-do__text">
+									ZEEXA — российская IT-компания, основанная в 2017 году. Изначально компания
+									занималась разработкой программного обеспечения и мобильных приложений, созданием
+									интернет-магазинов и других площадок.
+								</p>
+								<p class="what-we-do__text">
+									В 2021 году ZEEXA запустила сервис по оптимизации работы и автоматизации продвижения
+									на Wildberries и OZON. Первая запущенная услуга была — безопасные самовыкупы для
+									помощи селлерам. За это время компания значительно выросла.
+								</p>
+								<button class="what-we-do__button button button--icon">
+									<span>Наши работы</span>
+									<img src="@img/icons/button-arrow--dark.svg" alt="icon" />
 								</button>
 							</div>
 						</div>
