--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -47,7 +47,8 @@
 			<div class="footer__top">
 				<h2 class="footer__top-title">Начните прямо сейчас</h2>
 				<div class="footer__top-row">
-					<a class="footer__top-phone" href="tel:+79999999999">+7(999)999-99-99</a> //
+					<a class="footer__top-phone" href="tel:+79999999999">+7(999)999-99-99</a>
+					<span>//</span>
 					<a href="mailto:hello@zeexa-seller.ru" class="footer__top-email">hello@zeexa-seller.ru</a>
 				</div>
 			</div>
