--- a/src/index.html
+++ b/src/index.html
@@ -123,24 +123,56 @@
 					</div>
 				</section>
 				<section class="partners background-white">
-					<div class="partners__container _container">
+					<div class="partners__container">
 						<div class="partners__body">
 							<h2 class="partners__title">наши партнеры</h2>
-							<div class="partners__row">
-								<div class="partners__item">
-									<img src="@img/partner/01.svg" alt="partner-logo" />
-								</div>
-								<div class="partners__item">
-									<img src="@img/partner/02.svg" alt="partner-logo" />
-								</div>
-								<div class="partners__item">
-									<img src="@img/partner/03.svg" alt="partner-logo" />
-								</div>
-								<div class="partners__item">
-									<img src="@img/partner/04.svg" alt="partner-logo" />
-								</div>
-								<div class="partners__item">
-									<img src="@img/partner/05.svg" alt="partner-logo" />
+							<div class="partners__wrapper" data-slider>
+								<div class="partners__row" data-slider-wrapper>
+									<div class="partners__item">
+										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
+									</div>
+									<div class="partners__item">
+										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
+									</div>
 								</div>
 							</div>
 						</div>
@@ -148,76 +180,77 @@
 				</section>
 				<section class="service background-black">
 					<div class="service__container _container">
-						<div class="service__body" data-scroll-slider-container>
-							<h2 class="service__title section-title" data-reveal-type data-from="left">
+						<div class="service__body">
+							<h2 class="service__title section-title">
 								Наши ключевые <span>услуги</span> по <span>продвижению</span>
 							</h2>
-							<div class="service__content" data-scroll-slider="+=44">
-								<div class="service__item item-service">
-									<h4 class="item-service__title">
-										Улучшение карточки <br />
-										товара
-									</h4>
-									<div class="item-service__image-ibg">
-										<img class="shown" src="@img/service/image.jpg" alt="service" />
-										<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+							<div class="service__content service__slider">
+								<div class="service__content-inner service__swiper">
+									<div class="service__item item-service">
+										<h4 class="item-service__title">
+											Улучшение карточки <br />
+											товара
+										</h4>
+										<div class="item-service__image">
+											<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+										</div>
+										<p class="item-service__text">
+											High-end digital experiences. Created the heart Manhattan, we are a should
+											human team driving force.
+										</p>
+										<a class="item-service__link" href="#">
+											<svg>
+												<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
+											</svg>
+										</a>
 									</div>
-									<p class="item-service__text">
-										High-end digital experiences. Created the heart Manhattan, we are a should human
-										team driving force.
-									</p>
-									<a class="item-service__link" href="#">
-										<svg>
-											<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
-										</svg>
-									</a>
-								</div>
-								<div class="service__item item-service">
-									<h4 class="item-service__title">
-										Проработка <br />
-										стратегий
-									</h4>
-									<div class="item-service__image-ibg">
-										<img class="shown" src="@img/service/image.jpg" alt="service" />
-										<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+									<div class="service__item item-service">
+										<h4 class="item-service__title">
+											Проработка <br />
+											стратегий
+										</h4>
+										<div class="item-service__image">
+											<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+										</div>
+										<p class="item-service__text">
+											High-end digital experiences. Created the heart Manhattan, we are a should
+											human team driving force.
+										</p>
+										<a class="item-service__link" href="#">
+											<svg>
+												<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
+											</svg>
+										</a>
 									</div>
-									<p class="item-service__text">
-										High-end digital experiences. Created the heart Manhattan, we are a should human
-										team driving force.
-									</p>
-									<a class="item-service__link" href="#">
-										<svg>
-											<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
-										</svg>
-									</a>
-								</div>
-								<div class="service__item item-service">
-									<h4 class="item-service__title">
-										Настройка <br />
-										рекламы
-									</h4>
-									<div class="item-service__image-ibg">
-										<img class="shown" src="@img/service/image.jpg" alt="service" />
-										<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+									<div class="service__item item-service">
+										<h4 class="item-service__title">
+											Настройка <br />
+											рекламы
+										</h4>
+										<div class="item-service__image">
+											<img class="hidden" src="@img/service/hidden.svg" alt="hidden" />
+										</div>
+										<p class="item-service__text">
+											High-end digital experiences. Created the heart Manhattan, we are a should
+											human team driving force.
+										</p>
+										<a class="item-service__link" href="#">
+											<svg>
+												<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
+											</svg>
+										</a>
 									</div>
-									<p class="item-service__text">
-										High-end digital experiences. Created the heart Manhattan, we are a should human
-										team driving force.
-									</p>
-									<a class="item-service__link" href="#">
-										<svg>
-											<use xlink:href="@img/icons/icons.svg#arrow-right"></use>
-										</svg>
-									</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 				<section class="section-title-wrapper background-black">
-					<h2 class="section-title-decor">ПРОДВИЖЕНИЕ НА МАРКЕТПЛЕЙСАХ</h2>
-					<div class="section-title-wrapper__container _container">
-						<span class="title-hidden">qwerty</span>
+					<div class="section-title-wrapper__inner">
+						<h2 class="section-title-decor">ПРОДВИЖЕНИЕ НА МАРКЕТПЛЕЙСАХ</h2>
+						<div class="section-title-wrapper__container _container">
+							<span class="title-hidden">qwerty</span>
+						</div>
 					</div>
 				</section>
 				<section class="craft background-black">
