--- a/src/index.html
+++ b/src/index.html
@@ -102,8 +102,8 @@
 				<section class="what-we-do background-white">
 					<div class="what-we-do__container _container">
 						<div class="what-we-do__body">
-							<h2 class="what-we-do__title">Что мы <span>делаем?</span></h2>
-							<div class="what-we-do__text-wrapper">
+							<h2 class="what-we-do__title" data-aos="fade-right">Что мы <span>делаем?</span></h2>
+							<div class="what-we-do__text-wrapper" data-aos="fade-left">
 								<p class="what-we-do__text">
 									ZEEXA — российская IT-компания, основанная в 2017 году. Изначально компания
 									занималась разработкой программного обеспечения и мобильных приложений, созданием
@@ -181,10 +181,10 @@
 				<section class="service background-black">
 					<div class="service__container _container">
 						<div class="service__body">
-							<h2 class="service__title section-title">
+							<h2 class="service__title section-title" data-aos="fade-right">
 								Наши ключевые <span>услуги</span> по <span>продвижению</span>
 							</h2>
-							<div class="service__content service__slider">
+							<div class="service__content service__slider" data-aos="fade-left">
 								<div class="service__content-inner service__swiper">
 									<div class="service__item item-service">
 										<h4 class="item-service__title">
@@ -246,7 +246,7 @@
 					</div>
 				</section>
 				<section class="section-title-wrapper background-black">
-					<div class="section-title-wrapper__inner">
+					<div class="section-title-wrapper__inner" data-aos="fade-right">
 						<h2 class="section-title-decor">ПРОДВИЖЕНИЕ НА МАРКЕТПЛЕЙСАХ</h2>
 						<div class="section-title-wrapper__container _container">
 							<span class="title-hidden">qwerty</span>
@@ -256,7 +256,11 @@
 				<section class="craft background-black">
 					<div class="craft__container _container">
 						<div class="craft__body">
-							<h2 class="craft__title section-title" data-reveal-type data-from="right">
+							<h2
+								class="craft__title section-title"
+								data-reveal-type
+								data-from="right"
+								data-aos="fade-left">
 								Мы работаем над созданием надежных <br />
 								<span>продуктов</span> <br />
 								& Проектов для Вас
@@ -264,7 +268,7 @@
 							<div class="craft__cards" data-parallax-container>
 								<div class="craft__cards-left">
 									<div
-										class="craft__card card-craft"
+										class="craft__card card-craft card-craft--1"
 										data-parallax-item
 										data-scroll
 										data-scroll-speed="1">
@@ -333,7 +337,7 @@
 										</a>
 									</div>
 									<div
-										class="craft__card card-craft"
+										class="craft__card card-craft card-craft--2"
 										data-parallax-item
 										data-scroll
 										data-scroll-speed="1.4">
@@ -402,7 +406,7 @@
 										</a>
 									</div>
 									<div
-										class="craft__card card-craft"
+										class="craft__card card-craft card-craft--3"
 										data-parallax-item
 										data-scroll
 										data-scroll-speed="1.8">
@@ -473,7 +477,7 @@
 								</div>
 								<div class="craft__cards-right">
 									<div
-										class="craft__card card-craft"
+										class="craft__card card-craft card-craft--4"
 										data-parallax-item
 										data-scroll
 										data-scroll-speed="4">
@@ -542,7 +546,7 @@
 										</a>
 									</div>
 									<div
-										class="craft__card card-craft"
+										class="craft__card card-craft card-craft--5"
 										data-parallax-item
 										data-scroll
 										data-scroll-speed="5.8">
@@ -822,8 +826,8 @@
 				<section class="what-we-do what-we-do--why-me background-white">
 					<div class="what-we-do__container _container">
 						<div class="what-we-do__body">
-							<h2 class="what-we-do__title">Что мы <span>делаем?</span></h2>
-							<div class="what-we-do__text-wrapper">
+							<h2 class="what-we-do__title" data-aos="fade-right">Что мы <span>делаем?</span></h2>
+							<div class="what-we-do__text-wrapper" data-aos="fade-left">
 								<p class="what-we-do__text">
 									ZEEXA — российская IT-компания, основанная в 2017 году. Изначально компания
 									занималась разработкой программного обеспечения и мобильных приложений, созданием
