animation slide partners

--- a/src/index.html
+++ b/src/index.html
@@ -126,52 +126,37 @@
 					<div class="partners__container">
 						<div class="partners__body">
 							<h2 class="partners__title">наши партнеры</h2>
-							<div class="partners__wrapper" data-slider>
-								<div class="partners__row" data-slider-wrapper>
+							<div class="partners__wrapper">
+								<div class="partners__row">
 									<div class="partners__item">
-										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/01.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/02.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/03.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/04.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/05.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/01.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/02.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/03.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/04.svg" alt="partner-logo" />
 									</div>
 									<div class="partners__item">
-										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
-									</div>
-									<div class="partners__item">
-										<img src="@img/partner/01.svg" alt="partner-logo" data-slide />
-									</div>
-									<div class="partners__item">
-										<img src="@img/partner/02.svg" alt="partner-logo" data-slide />
-									</div>
-									<div class="partners__item">
-										<img src="@img/partner/03.svg" alt="partner-logo" data-slide />
-									</div>
-									<div class="partners__item">
-										<img src="@img/partner/04.svg" alt="partner-logo" data-slide />
-									</div>
-									<div class="partners__item">
-										<img src="@img/partner/05.svg" alt="partner-logo" data-slide />
+										<img src="@img/partner/05.svg" alt="partner-logo" />
 									</div>
 								</div>
 							</div>
@@ -813,6 +798,33 @@
 									</div>
 								</div>
 								<h2 class="team__title">Команда</h2>
+							</div>
+							<div class="team__row-mobile">
+								<h2 class="team__row-title">Команда</h2>
+								<div class="team__mobile-slider">
+									<div class="team__mobile-slider-wrapper team__swiper">
+										<div class="team__mobile-slide">
+											<div class="team__mobile-ibg">
+												<img src="@img/team/01.jpg" alt="img" />
+											</div>
+										</div>
+										<div class="team__mobile-slide">
+											<div class="team__mobile-ibg">
+												<img src="@img/team/02.jpg" alt="img" />
+											</div>
+										</div>
+										<div class="team__mobile-slide">
+											<div class="team__mobile-ibg">
+												<img src="@img/team/03.jpg" alt="img" />
+											</div>
+										</div>
+										<div class="team__mobile-slide">
+											<div class="team__mobile-ibg">
+												<img src="@img/team/04.jpg" alt="img" />
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<div class="team__actions">
 								<button class="team__button button button--icon">
