--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -47,13 +47,15 @@
 			<div class="footer__top">
 				<h2 class="footer__top-title">Начните прямо сейчас</h2>
 				<div class="footer__top-row">
-					<a class="footer__top-phone" href="tel:+79999999999">+7(999)999-99-99</a>
+					<a class="footer__top-phone" href="tel:+998 91 680 34 54">+998 91 680 34 54</a>
 					<span>//</span>
-					<a href="mailto:hello@zeexa-seller.ru" class="footer__top-email">hello@zeexa-seller.ru</a>
+					<a href="mailto:digitalappgrade@gmail.com" class="footer__top-email">digitalappgrade@gmail.com</a>
 				</div>
 			</div>
 			<div class="footer__main">
-				<a class="footer__logo" href="#">softlight</a>
+				<a class="footer__logo" href="#">
+					<img src="@img/logo.svg" alt="logo" />
+				</a>
 				<div class="footer__columns">
 					<div class="footer__column">
 						<h3 class="footer__column-title">Страницы</h3>
@@ -69,8 +71,8 @@
 					<div class="footer__column">
 						<h3 class="footer__column-title">Контакты</h3>
 						<div class="footer__column-text">
-							153000, г . Иваново, ул. <br />
-							Садовая д.3, оф. 212
+							300001, г . Тула <br />
+							Ул. Каминского 24
 						</div>
 					</div>
 					<div class="footer__column">
@@ -83,25 +85,15 @@
 						</form>
 						<div class="footer__social">
 							<div class="footer__social--desktop">
-								<a class="footer__social-item" href="#">
+								<a
+									class="footer__social-item"
+									href="https://www.instagram.com/km.oleg_?igsh=MWRjcmsyZGhvMHBiMQ%3D%3D&utm_source=qr">
 									<svg>
 										<use xlink:href="@img/icons/icons.svg#insta"></use>
 									</svg>
 								</a>
-								<a class="footer__social-item" href="#">
-									<svg>
-										<use xlink:href="@img/icons/icons.svg#facebook"></use>
-									</svg>
-								</a>
-								<a class="footer__social-item" href="#">
-									<svg>
-										<use xlink:href="@img/icons/icons.svg#twitter"></use>
-									</svg>
-								</a>
-								<a class="footer__social-item" href="#">
-									<svg>
-										<use xlink:href="@img/icons/icons.svg#linkedin"></use>
-									</svg>
+								<a class="footer__social-item" href="https://t.me/front_km">
+									<img src="@img/icons/telegram.svg" alt="telegram-icon" />
 								</a>
 							</div>
 							<div class="footer__social--mobile">
@@ -116,7 +108,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer__bottom">Copyright © Portlight |</div>
+			<div class="footer__bottom">Copyright © 2024 |</div>
 		</div>
 	</div>
 </footer>
