--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -9,7 +9,8 @@
 					<ul class="menu__list">
 						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Главная</a></li>
 						<li class="menu__item"><a class="menu__link" href="#" data-header-link>О Нас</a></li>
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Работы</a></li>
+						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Портфолио</a></li>
+						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Команда</a></li>
 						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Контакты</a></li>
 					</ul>
 				</nav>
