--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
 
-	<link rel="stylesheet" href="css/style.min.css?_v=20240301003003" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20240301004000" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,37 +114,37 @@
 					<div class="main-block__slider-wrapper" data-slider-wrapper>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-01.webp" type="image/webp"><img src="img/main-slider/slide-01.jpg" alt="slide" /></picture>
+								<picture><source srcset="img/craft/01.webp" type="image/webp"><img src="img/craft/01.jpg" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-02.webp" type="image/webp"><img src="img/main-slider/slide-02.jpg" alt="slide" /></picture>
+								<picture><source srcset="img/craft/02.webp" type="image/webp"><img src="img/craft/02.jpg" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-03.webp" type="image/webp"><img src="img/main-slider/slide-03.jpg" alt="slide" /></picture>
+								<picture><source srcset="img/craft/03.webp" type="image/webp"><img src="img/craft/03.jpg" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-04.webp" type="image/webp"><img src="img/main-slider/slide-04.jpg" alt="slide" /></picture>
+								<picture><source srcset="img/craft/04.webp" type="image/webp"><img src="img/craft/04.jpg" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-05.webp" type="image/webp"><img src="img/main-slider/slide-05.jpg" alt="slide" /></picture>
+								<picture><source srcset="img/craft/05.webp" type="image/webp"><img src="img/craft/05.jpg" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-06.webp" type="image/webp"><img src="img/main-slider/slide-06.png" alt="slide" /></picture>
+								<picture><source srcset="img/craft/06.webp" type="image/webp"><img src="img/craft/06.png" alt="slide" /></picture>
 							</div>
 						</div>
 						<div class="main-block__slide" data-slide>
 							<div class="main-block__slide-ibg">
-								<picture><source srcset="img/main-slider/slide-07.webp" type="image/webp"><img src="img/main-slider/slide-07.png" alt="slide" /></picture>
+								<picture><source srcset="img/craft/07.webp" type="image/webp"><img src="img/craft/07.png" alt="slide" /></picture>
 							</div>
 						</div>
 					</div>
@@ -903,7 +903,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240301003003"></script>
+	<script src="js/app.min.js?_v=20240301004000"></script>
 
 </body>
 
