--- a/src/index.html
+++ b/src/index.html
@@ -37,37 +37,37 @@
 						<div class="main-block__slider-wrapper" data-slider-wrapper>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-01.jpg" alt="slide" />
+									<img src="@img/craft/01.jpg" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-02.jpg" alt="slide" />
+									<img src="@img/craft/02.jpg" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-03.jpg" alt="slide" />
+									<img src="@img/craft/03.jpg" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-04.jpg" alt="slide" />
+									<img src="@img/craft/04.jpg" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-05.jpg" alt="slide" />
+									<img src="@img/craft/05.jpg" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-06.png" alt="slide" />
+									<img src="@img/craft/06.png" alt="slide" />
 								</div>
 							</div>
 							<div class="main-block__slide" data-slide>
 								<div class="main-block__slide-ibg">
-									<img src="@img/main-slider/slide-07.png" alt="slide" />
+									<img src="@img/craft/07.png" alt="slide" />
 								</div>
 							</div>
 						</div>
