--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,4 @@
-<footer class="footer background-white">
+<footer class="footer background-white" id="footer">
 	<div class="footer__star footer__star--dark footer__star--big footer__star">
 		<svg>
 			<use xlink:href="@img/icons/icons.svg#star"></use>
