--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -7,11 +7,21 @@
 			<div class="header__right">
 				<nav class="header__menu menu" data-da=".menu-mobile, 767.98, 0">
 					<ul class="menu__list">
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Главная</a></li>
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>О Нас</a></li>
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Портфолио</a></li>
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Команда</a></li>
-						<li class="menu__item"><a class="menu__link" href="#" data-header-link>Контакты</a></li>
+						<li class="menu__item">
+							<a class="menu__link" href="#" data-goto="#main-section" data-header-link>Главная</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#" data-goto="#about-section" data-header-link>О Нас</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#" data-goto="#portfolio-section" data-header-link>Портфолио</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#" data-goto="#team-section" data-header-link>Команда</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#" data-goto="#footer" data-header-link>Контакты</a>
+						</li>
 					</ul>
 				</nav>
 				<button class="header__burger icon-menu">
