--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<div class="wrapper" id="wrapper" data-scroll-container>
 			@@include('html/_header.htm',{})
 			<main class="page">
-				<section class="main-block background-white">
+				<section class="main-block background-white" id="main-section">
 					<div class="main-block__container _container">
 						<div class="main-block__text-wrapper">
 							<h1 class="main-block__title" data-reveal-init data-from-init="left">
@@ -76,7 +76,7 @@
 						<img src="@img/main-slider/scroll-down.svg" alt="button-icon" />
 					</button>
 				</section>
-				<section class="what-we-do background-white">
+				<section class="what-we-do background-white" id="about-section">
 					<div class="what-we-do__container _container">
 						<div class="what-we-do__body">
 							<h2 class="what-we-do__title" data-aos="fade-right">Что мы <span>создаем?</span></h2>
@@ -234,7 +234,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="craft background-black">
+				<section class="craft background-black" id="portfolio-section">
 					<div class="craft__container _container">
 						<div class="craft__body">
 							<h2
@@ -831,7 +831,7 @@
 						</div>
 					</div>
 				</div>
-				<section class="team background-black">
+				<section class="team background-black" id="team-section">
 					<div class="team__container _container">
 						<div class="team__body">
 							<div class="team__row-wrapper">
