--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -97,12 +97,16 @@
 								</a>
 							</div>
 							<div class="footer__social--mobile">
-								<a class="footer__social-item" href="#">
+								<a
+									class="footer__social-item"
+									href="https://www.instagram.com/km.oleg_?igsh=MWRjcmsyZGhvMHBiMQ%3D%3D&utm_source=qr">
 									<svg>
 										<use xlink:href="@img/icons/icons.svg#insta"></use>
 									</svg>
 								</a>
-								<a class="footer__social-connect button" href="#">Connect us</a>
+								<a class="footer__social-item" href="https://t.me/front_km">
+									<img src="@img/icons/telegram.svg" alt="telegram-icon" />
+								</a>
 							</div>
 						</div>
 					</div>
