--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
 
-	<link rel="stylesheet" href="css/style.min.css?_v=20240301040437" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20240301190453" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -896,12 +896,14 @@
 										</a>
 									</div>
 									<div class="footer__social--mobile">
-										<a class="footer__social-item" href="#">
+										<a class="footer__social-item" href="https://www.instagram.com/km.oleg_?igsh=MWRjcmsyZGhvMHBiMQ%3D%3D&utm_source=qr">
 											<svg>
 												<use xlink:href="img/icons/icons.svg#insta"></use>
 											</svg>
 										</a>
-										<a class="footer__social-connect button" href="#">Connect us</a>
+										<a class="footer__social-item" href="https://t.me/front_km">
+											<img src="img/icons/telegram.svg" alt="telegram-icon" />
+										</a>
 									</div>
 								</div>
 							</div>
@@ -913,7 +915,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240301040437"></script>
+	<script src="js/app.min.js?_v=20240301190453"></script>
 
 </body>
 
