--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 				<section class="main-block background-white" id="main-section">
 					<div class="main-block__container _container">
 						<div class="main-block__text-wrapper">
-							<h1 class="main-block__title" data-reveal-init data-from-init="left">
+							<h1 class="main-block__title" data-reveal-init data-from-init="left" data-split>
 								СОЗДАНИЕ САЙТОВ <br />
 								И ПРИЛОЖЕНИЙ ПОД КЛЮЧ
 							</h1>
-							<p class="main-block__text" data-reveal-init data-from-init="right">
+							<p class="main-block__text" data-reveal-init data-from-init="right" data-split>
 								Продвигаем ваш бизнес в интернете, быстро, понятно и прогрессивно!
 							</p>
 						</div>
