--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
 
-	<link rel="stylesheet" href="css/style.min.css?_v=20240302044034" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20240303200400" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -99,11 +99,11 @@
 			<section class="main-block background-white" id="main-section">
 				<div class="main-block__container _container">
 					<div class="main-block__text-wrapper">
-						<h1 class="main-block__title" data-reveal-init data-from-init="left">
+						<h1 class="main-block__title" data-reveal-init data-from-init="left" data-split>
 							СОЗДАНИЕ САЙТОВ <br />
 							И ПРИЛОЖЕНИЙ ПОД КЛЮЧ
 						</h1>
-						<p class="main-block__text" data-reveal-init data-from-init="right">
+						<p class="main-block__text" data-reveal-init data-from-init="right" data-split>
 							Продвигаем ваш бизнес в интернете, быстро, понятно и прогрессивно!
 						</p>
 					</div>
@@ -879,7 +879,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240302044034"></script>
+	<script src="js/app.min.js?_v=20240303200400"></script>
 
 </body>
 
